Fix black color and input spacings.

--- a/symphony/assets/css/src/symphony.less
+++ b/symphony/assets/css/src/symphony.less
@@ -103,6 +103,13 @@ a, button, input, li {
 	.transitioned(~'color, background, border');
 }
 
+a, button {
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+}
+
 /* Paragraphs */
 
 p {
